[GStreamer] usec rounding is wrong during accurate seeking https://bugs.webkit.org/show_bug.cgi?id=90734

Reviewed by Carlos Garcia Campos.

Use floor() to round the microseconds value, this is more robust
than roundf.

* platform/graphics/gstreamer/GStreamerUtilities.cpp:
(WebCore::toGstClockTime):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::playbackPosition):

Canonical link: https://commits.webkit.org/177305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202558 268f45cc-cd09-0410-ab3c-d52691b4dbfc